--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <main>
         <p>main</p>
     </main>
-    <left>
+    <nav>
         <p>left</p>
-    </left>
-    <right>
+    </nav>
+    <div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, ad! Culpa dignissimos quae fugit dolorem
             facilis ex exercitationem maiores alias laboriosam tempora quas officia, magnam consequatur tempore
             asperiores distinctio. Quae!s</p>
-    </right>
+    </div>
     <footer>
         <p>footer</p>
     </footer>
